SDHTML-9451 : Fixed a few bugs, added spacing to scroll.spec, removed constants from scroll.spec, removed the unnecessary empty browser gets. Made Messager start in reduced position, opens automatically when a message is sent through. Changed filename to match the directive name. Updated styling and positioning of inputs they must always be in visible position even in reduced mode.

--- a/example/app/styles/main.css
+++ b/example/app/styles/main.css
@@ -130,7 +130,7 @@ ul li a:hover, ul li a.active {
     background-color: rgba(200,255,200,0.8);
     color: black;
     text-align: left;
-    padding: 0px 20px;
+    padding: 20px;
     font-size: 15px;
     z-index: 999999;
 	border-radius: 10px;
@@ -160,16 +160,16 @@ ul li a:hover, ul li a.active {
 .sg-messager-explanation-message.reduced {
 	overflow-x: hidden;
 	overflow-y: hidden;
-	height: 37px;
-	width: 23px;
+	width: 25px;
 }
 .sg-messager-area-icons {
-    position: absolute;
-	top: 3px;
-	right: 10px;
+	float: right;
+	margin-right: -11px;
 }
 .sg-messager-input {
-	opacity:0; 
-	width:10px;
+	position: absolute;
+	opacity:0;
+	width:2px;
+	height:2px;
 }
 /* ---------- */
